feature: implement logics

--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "tsc",
     "start:dev": "nodemon",
     "start:test": "SET NODE_ENV=test & nodemon",
+    "test:ui": "SET NODE_ENV=test & vitest --ui --coverage.enabled=true",
+    "test:report": "SET NODE_ENV=test & vitest --reporter=verbose",
+    "test:cov": "SET NODE_ENV=test & vitest --run --coverage --reporter=verbose",
     "start:prod": "node dist/index.js",
     "format:check": "prettier --check .",
     "format:write": "prettier --write .",
