--- a/package.json
+++ b/package.json
@@ -20,19 +20,19 @@
   "author": "minhle",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.2",
     "@vitest/coverage-v8": "^2.1.8",
     "@vitest/ui": "^2.1.8",
     "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.9",
-    "prettier": "^3.4.2",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.0",
     "vitest": "^2.1.8"
   },
   "dependencies": {
-    "natural": "^8.0.1"
+    "natural": "^8.0.1",
+    "prettier": "^3.4.2"
   }
 }
